# shakespeare

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
api/: nl_to_sparql.py
data/ingest/: hamlet.py
docker/: docker-compose.yml
docker/oxigraph/: README.md
docker/widoco/: Dockerfile  README.md  nginx.default.conf
docs/: ARCHITECTURE.md  CURATION_PIPELINE.md  ONTOLOGY.md  PITFALLS.md  PUBLISHING.md  ROADMAP.md  RUN.md  STRUCTSENSE_ADAPTATION.md  VISION.md  example_queries.sparql
ontology/: README.md
schemas/: shakespeare_crm.yaml
schemas/examples/: sample_character.yaml  sample_work.yaml  sample_work_henry_iv.yaml
src/shakespeare_tools/: __init__.py  hamlet_seed.py  ontology_gen.py  oxigraph_load.py
src/shakespeare_tools/curation/: __init__.py  agents.py  cli.py  context.py  emit.py  graph_constants.py  models.py  ontology_index.py  pipeline.py  prep.py  review_merge.py  sparql_client.py  task_pack.py  validation.py
src/shakespeare_tools/curation/examples/: 1henryiv_task_pack.yaml  hamlet_task_pack.yaml
src/shakespeare_tools/mit_html/: __init__.py  clean.py  cli.py  discovery.py  encoding.py  errors.py  models.py  plays.py  poetry.py
src/shakespeare_tools/ui/: __init__.py  app.py
store/: README.md
tests/: test_curation_pipeline.py  test_mit_html.py  test_oxigraph_load.py  test_prep_mit_play.py
